fix the gap

--- a/src/css/container.css
+++ b/src/css/container.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 320px) {
   .container {
-    min-width: 320px;
+    width: 320px;
     padding-left: 20px;
     padding-right: 20px;
     margin-left: auto;
